seer-core/tests/snapshots/format_snapshots__markdown_lookup_whois_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 780
expression: markdown ().format_lookup (& fixture_lookup_whois())
---
## Lookup: example.com

- **Source**: WHOIS (RDAP unavailable)
- **RDAP Error**: RDAP bootstrap has no entry for this TLD
- **Registrar**: Mock Registrar Inc.
- **Registrant**: Jane Registrant
- **Organization**: Example Holdings LLC
- **Created**: `2010-03-15`
- **Expires**: `2099-03-15` (expires in [N] days)
- **Status**: `clientTransferProhibited`
- **Nameservers**: `ns1.example.com`, `ns2.example.com`
- **DNSSEC**: signedDelegation

### Registrant Contact

- **Email**: `owner@example.com`
- **Phone**: +1.5555550100
- **Address**: 1 Main St, Springfield
- **Country**: US

### Admin Contact

- **Name**: Alex Admin
- **Organization**: Example Holdings LLC
- **Email**: `admin@example.com`
- **Phone**: +1.5555550101

### Tech Contact

- **Name**: Terry Tech
- **Email**: `tech@example.com`
