seer-core/tests/snapshots/format_snapshots__markdown_posture_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 387
expression: markdown ().format_posture (& fixture_posture())
---
## Email posture: example.com

| Mechanism | Verdict | Detail |
| --- | --- | --- |
| SPF | strict | -all |
| DMARC | moderate | p=quarantine |
| MTA-STS | absent |  |
| BIMI | present |  |
| DANE | present | 1 TLSA |

### Advisories

- DMARC pct=50 applies the policy to only half of spoofed mail
- MTA-STS is not configured
