seer-core/tests/snapshots/format_snapshots__markdown_propagation_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 998
expression: markdown ().format_propagation (& fixture_propagation())
---
## Propagation: example.com A

**Partially propagated** — 1 of 2 responding servers agree

- **Consensus**: `192.0.2.1`
- **No answer**: 1 of 3 servers

### Results

| | Server | Region | IP | Answer | Time |
| --- | --- | --- | --- | --- | --- |
| ✓ | Google | North America | `8.8.8.8` | matches consensus | 12 ms |
| ≠ | Quad9 | Europe | `9.9.9.9` | `192.0.2.9` | 30 ms |
| ✗ | Yandex | Europe | `77.88.8.8` | timeout | — |

> Note: DNS responses are not DNSSEC-validated.
