seer-core/tests/snapshots/format_snapshots__markdown_rdap_autnum_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_rdap (& fixture_rdap_autnum())
---
## RDAP: EXAMPLE-AS

- **Handle**: `AS64496`
- **AS Number**: `AS64496` - `AS64511`
