seer-core/tests/snapshots/format_snapshots__markdown_rdap_contacts_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 780
expression: markdown ().format_rdap (& fixture_rdap_with_contacts())
---
## RDAP: EXAMPLE.COM

- **Handle**: `2336799_DOMAIN_COM-VRSN`
- **Registrar**: Mock Registrar Inc.
- **Registrant**: Jane Registrant
- **Organization**: Example Holdings LLC
- **Created**: `2010-03-15`
- **Expires**: `2099-03-15` (expires in [N] days)
- **Updated**: `2024-02-01`
- **Status**: `client transfer prohibited`
- **Nameservers**: `NS1.EXAMPLE.COM`
- **DNSSEC**: signed

### Registrant Contact

- **Email**: `owner@example.com`
- **Address**: 1 Main St, Springfield, US
- **Country**: US

### Admin Contact

- **Name**: Alex Admin
- **Organization**: Example Holdings LLC
- **Email**: `admin@example.com`
- **Phone**: +1.5555550101

### Tech Contact

- **Name**: Terry Tech
- **Email**: `tech@example.com`

### Billing Contact

- **Name**: Bill Billing
- **Address**: 2 Side St, Shelbyville, US
- **Country**: US
