seer-core/tests/snapshots/format_snapshots__markdown_status_expired_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 301
expression: markdown ().format_status (& fixture_status_expired())
---
## Status: expired.example

- **HTTP Status**: `200` (OK)

### SSL Certificate

*Not available (HTTPS may not be configured)*

### Domain Registration

- **Registrar**: Mock Registrar Inc.
- **Expires**: `2020-01-01` (expired [N] days ago)

### DNS Resolution

*Check failed*
