seer-core/tests/snapshots/format_snapshots__markdown_status_full_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_status (& fixture_status_full())
---
## Status: example.com

- **HTTP Status**: `200` (OK)
- **Site Title**: Example Domain

### SSL Certificate

- **Subject**: `CN=example.com`
- **Issuer**: CN=Mock CA
- **Status**: Valid
- **Hostname Match**: yes
- **Valid From**: `2025-01-01`
- **Expires**: `2099-01-01` (expires in [N] days)

### CAA Policy

- **Found at**: `example.com`

| Flags | Tag | Value |
| --- | --- | --- |
| 0 | `issue` | `letsencrypt.org` |
| 0 | `issuewild` | `pki.goog` |
| 128 | `iodef` | `mailto:security@example.com` |

> **Note:** CAA is checked by CAs at issuance time, not by clients at validation time. A cert whose issuer is not in the current CAA policy is not invalid — it may have been issued before the policy was set, or under a parent zone. Treat mismatches as informational.

### Domain Registration

- **Registrar**: Mock Registrar Inc.
- **Expires**: `2099-03-15` (expires in [N] days)

### DNS Resolution

- **Resolves**: Yes
- **CNAME**: `edge.example.net`
- **IPv4 (A)**: `192.0.2.1`
- **IPv6 (AAAA)**: `2001:db8::1`
- **Nameservers**: `ns1.example.com`
